--- a/public/css/a3.css
+++ b/public/css/a3.css
@@ -101,14 +101,18 @@ p.form-control-static {
 }
 
 /* styling for the 'alert' box */
-.alert-success {
+.alert.alert-success, .alert.alert-danger {
     padding: .75em;
     width: 100%;
 }
 
-div.alert-success p {
+div.alert.alert-success p {
     font-size: 2em;
     text-align: center;
+}
+
+li {
+    font-size: 1.5em;
 }
 
 /* media query for desktop */
@@ -120,6 +124,10 @@ div.alert-success p {
 	}
     div.alert-success p {
         font-size: 1.5em;
+    }
+
+    li {
+        font-size: 1.1em;
     }
 }
 
