--- a/public/css/a3.css
+++ b/public/css/a3.css
@@ -21,6 +21,7 @@ body {
     margin-top: 2%;
     margin-bottom: 2%;
     min-width: 300px;
+    overflow: scroll;
     padding: 10px 50px;
     width: 40%;
 }
