--- a/public/css/a3.css
+++ b/public/css/a3.css
@@ -156,9 +156,10 @@ div.alert.alert-success p {
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) and (max-width: 767px) {
     body {
-		margin-top: 4%;
-        margin-bottom: 4%;
-        width: 45%;
+		margin-top: 3%;
+        margin-bottom: 3%;
+        padding: 7.5px 25px;
+        width: 50%;
 	}
     h1 {
         font-size: 2em;
